Created package `cmd` and `cmd.linux` to provide basic methods to fun an os nativ command. As an example we use `lsblk` for linux.